--- a/style.css
+++ b/style.css
@@ -148,7 +148,7 @@ h4 {
 }
 
 .html {
-    width: 20%;
+    width: 80%;
     height: .5rem;
     background-color: #e54c21;
     margin: 1rem 0;
@@ -171,7 +171,7 @@ h4 {
     border-radius: 12px;
 }
 
-.bootstrap {
+.java {
     width: 70%;
     height: .5rem;
     background-color: #7952b3;
@@ -179,7 +179,7 @@ h4 {
     border-radius: 12px;
 }
 
-.reactjs {
+.python {
     width: 80%;
     height: .5rem;
     background-color: #61dafb;
@@ -570,4 +570,5 @@ ul li a:hover {
     background-color: #4db5ff;
 
 }
+
 
